--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>🌐 Cathy Obach</h1>
+  <h1>🌐 Catherine A. Obach</h1>
   <p><strong>eCommerce Operations Virtual Assistant</strong></p>
   <p>📍 Philippines | ✉️ catherineobach94@gmail.com</p>
 
@@ -57,3 +57,4 @@
   💼 Available for full-time remote eCommerce support</p>
 </body>
 </html>
+
